# Mather

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
frontend/: index.html
src/: main.ts  server.ts  tutorial.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/chapters/: 01-getting-started-with-typescript.ts  02-exploring-the-type-system.ts  03-primitive-types.ts  04-type-annotations.ts  05-optional-properties.ts  06-readonly-properties.ts  07-index-signatures.ts  08-extending-types.ts  09-literal-types.ts  10-literal-inference.ts  11-strictnullchecks.ts  12-enums.ts  13-narrowing.ts  14-assignments.ts  15-control-flow-analysis.ts  16-type-predicates.ts  17-discriminated-unions.ts  18-the-never-type.ts  19-exhaustiveness-checking.ts  20-object-types.ts  21-tuple-type.ts  22-named-tuple-type.ts  23-fixed-length-tuple.ts  24-union-type.ts  25-intersection-types.ts  26-type-indexing.ts  27-type-from-value.ts  28-type-from-func-return.ts  29-type-from-module.ts  30-mapped-types.ts  31-mapped-type-modifiers.ts  32-conditional-types.ts  33-distributive-conditional-types.ts  34-infer-type-inference-in-conditional-types.ts  35-predefined-conditional-types.ts  36-template-union-types.ts  37-any-type.ts  38-unknown-type.ts  39-void-type.ts  40-never-type.ts  (+16 more)
src/routes/: agent.ts  observer.ts  rtc.ts  sessions.ts  tutorial.ts
